完善庫存與倉位管理功能：新增儲位管理頁面、修正零件與訂單關聯、優化盤點功能並支援 XLSX 匯出入

--- a/templates/inventory/index.html
+++ b/templates/inventory/index.html
@@ -23,8 +23,8 @@
                         <select class="form-select" name="warehouse_id" onchange="this.form.submit()">
                             <option value="">所有倉庫</option>
                             {% for warehouse in warehouses %}
-                            <option value="{{ warehouse.id }}" {{ 'selected' if warehouse.id == selected_warehouse_id else '' }}>
-                                {{ warehouse.code }} - {{ warehouse.name }}
+                            <option value="{{ warehouse['id'] }}" {{ 'selected' if warehouse['id'] == selected_warehouse_id else '' }}>
+                                {{ warehouse['code'] }} - {{ warehouse['name'] }}
                             </option>
                             {% endfor %}
                         </select>
