--- a/templates/inventory/transactions.html
+++ b/templates/inventory/transactions.html
@@ -33,7 +33,7 @@
                         <select class="form-select" id="warehouse_filter" name="warehouse_id">
                             <option value="">全部倉庫</option>
                             {% for warehouse in warehouses %}
-                            <option value="{{ warehouse.id }}">{{ warehouse.name }}</option>
+                            <option value="{{ warehouse['id'] }}">{{ warehouse['name'] }}</option>
                             {% endfor %}
                         </select>
                     </div>
