--- a/templates/base.html
+++ b/templates/base.html
@@ -54,6 +54,11 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('web.warehouse_locations') }}">
+                            <i class="fas fa-map-marked-alt me-1"></i>倉位管理
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('web.orders') }}">
                             <i class="fas fa-shopping-cart me-1"></i>訂單管理
                         </a>
