--- a/templates/orders.html
+++ b/templates/orders.html
@@ -42,6 +42,8 @@
                                 <th>訂單編號</th>
                                 <th>零件編號</th>
                                 <th>零件名稱</th>
+                                <th>倉庫</th>
+                                <th>儲位</th>
                                 <th>訂購日期</th>
                                 <th>數量</th>
                                 <th>狀態</th>
@@ -54,8 +56,10 @@
                                     <input type="checkbox" class="order-checkbox" value="{{ order.id }}">
                                 </td>
                                 <td><strong>#{{ order.id }}</strong></td>
-                                <td>{{ order.part_number }}</td>
-                                <td>{{ order.part_name }}</td>
+                                <td>{{ order.part.part_number if order.part else '-' }}</td>
+                                <td>{{ order.part.name if order.part else '-' }}</td>
+                                <td>{{ order.warehouse.name if order.warehouse else '-' }}</td>
+                                <td>{{ order.location_code or '-' }}</td>
                                 <td>{{ order.order_date }}</td>
                                 <td>{{ order.quantity_ordered }}</td>
                                 <td>
@@ -97,6 +101,8 @@
                                 <th>訂單編號</th>
                                 <th>零件編號</th>
                                 <th>零件名稱</th>
+                                <th>倉庫</th>
+                                <th>儲位</th>
                                 <th>訂購日期</th>
                                 <th>數量</th>
                                 <th>狀態</th>
@@ -106,8 +112,10 @@
                             {% for order in all_orders %}
                             <tr>
                                 <td><strong>#{{ order.id }}</strong></td>
-                                <td>{{ order.part_number }}</td>
-                                <td>{{ order.part_name }}</td>
+                                <td>{{ order.part.part_number if order.part else '-' }}</td>
+                                <td>{{ order.part.name if order.part else '-' }}</td>
+                                <td>{{ order.warehouse.name if order.warehouse else '-' }}</td>
+                                <td>{{ order.location_code or '-' }}</td>
                                 <td>{{ order.order_date }}</td>
                                 <td>{{ order.quantity_ordered }}</td>
                                 <td>
